objects/vlocity_cmt__OrchestrationItemRelationship__c.object
<CustomObject>
    <description>Generic Orchestration Item relationship. Mainly used during supplemental Order to maintain the continuity chain of dependencies.</description>
    <fields>
        <fullName>vlocity_cmt__ItemId__c</fullName>
        <label>Item</label>
        <referenceTo>vlocity_cmt__OrchestrationItem__c</referenceTo>
        <relationshipLabel>Orchestration Item Relationships (Principal)</relationshipLabel>
        <relationshipName>OrchestrationItemRelationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RelatedItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Item</label>
        <referenceTo>vlocity_cmt__OrchestrationItem__c</referenceTo>
        <relationshipLabel>Orchestration Item Relationships (Related)</relationshipLabel>
        <relationshipName>OrchestrationItemRelationshipsRelated</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RelationshipType__c</fullName>
        <description>The type of relationship between the pair of orchestration items.</description>
        <label>Relationship Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Orchestration Item Relationship</label>
    <nameField>
        <label>Orchestration Item Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orchestration Item Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>